# one-record-models

./: '  app.py  generate.py  generate_models.py  generate_namespaces.py  main.py  pyproject.toml  test.py  test2.py  v2.py
src/one_record_ontology/models/: api.py  base_model.py  cargo.py  code_lists.py
src/one_record_ontology/models/api/: AccessDelegation.py  AccessDelegationRequest.py  ActionRequest.py  AuditTrail.py  Change.py  ChangeRequest.py  Collection.py  Error.py  ErrorDetail.py  Notification.py  NotificationEventType.py  Operation.py  OperationObject.py  PatchOperation.py  Permission.py  RequestStatus.py  ServerInformation.py  Subscription.py  SubscriptionEventType.py  SubscriptionRequest.py  TopicType.py  Verification.py  VerificationRequest.py
src/one_record_ontology/models/cargo/: AWBUseIndicator.py  AccountNumber.py  AccountType.py  AccountingNote.py  ActionTimeType.py  ActivitySequence.py  Actor.py  Address.py  Adjustments.py  AircraftPossibilityCode.py  Answer.py  BasicRateClassCode.py  BillingDetails.py  Booking.py  BookingOption.py  BookingOptionRequest.py  BookingOptionStatus.py  BookingPreferences.py  BookingRequest.py  BookingSegment.py  BookingShipment.py  BookingStatus.py  BookingTimes.py  CO2Emissions.py  Carrier.py  CarrierProduct.py  Characteristic.py  ChargeCode.py  Check.py  (+131 more)
src/one_record_ontology/namespaces/: _API.py  _CARGO.py  _CODELISTS.py  __init__.py
src/one_record_ontology/utils/: graph_utils.py
tests/: test_main.py
tests/resources/: Notification.json  Piece.json  ServerInformation.json  Subscription.json  Waybill.json
(+85 files in other folders)
