[project]
name = "one-record-ontology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "rdflib>=7.5.0",
]


[dependency-groups]
dev = [
    "fastapi[standard]>=0.128.0",
    "mypy>=1.19.1",
]


[tool.uv]
package = true


[tool.ruff.lint]
extend-select = [
    "I",
]


[tool.ruff.lint.per-file-ignores]
# Ignore `E741` (ambiguous variable name) in all files under `app/namespaces/code_lists/`.
"src/one_record_ontology/models/generated/code_lists.py" = ["E741"]
